<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.projekakhirplatformkelompok5.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_order_ticket"
        android:name="com.dicoding.projekakhirplatformkelompok5.ui.orderticket.OrderTicketFragment"
        android:label="@string/title_order_ticket"
        tools:layout="@layout/fragment_order_ticket" />

    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="com.dicoding.projekakhirplatformkelompok5.ui.wishlist.WishlistFragment"
        android:label="@string/title_wishlist"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dicoding.projekakhirplatformkelompok5.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>