<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?attr/colorSurface">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilih_kursi_anda"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tv_info_pemilihan_kursi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        tools:text="Pilih 2 kursi lagi."/>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/seat_selected"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layar_bioskop"
        android:layout_gravity="center_horizontal"/>


    <GridLayout
        android:id="@+id/grid_layout_seats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:columnCount="8"
        android:rowCount="6"
        tools:layout_height="200dp"
        tools:layout_width="300dp" />

    <Button
        android:id="@+id/btn_done_selecting_seats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:enabled="false"
        android:text="@string/selesai" />

</LinearLayout>
